Version: 1.0.11
Date: 29/6/25
  Bugfixes:
    - Fixed that the quest "It Wasn't Good Enough" wasn't able to be completed.
    - Fixed that opening a hex core in editor mode would crash the game.
    - Fixed that the Lazy Looter quest was only able to be completed when you were not in remote view on the dungeon's planet.
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 27/6/25
  Translation:
    - Added Russian translations. (courtesy Shadow_Man)
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 26/6/25
  Modding:
    - Flagged Bob's Warfare mod as incompatible.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 25/6/25
  Bugfixes:
    - Fixed a crash related to several features involving hex cores.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 25/6/25
  Modding:
    - Added support for mods that accidentally clear items from other mods' list boxes.
      Current known mod that does this: RPG
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 23/6/25
  Modding:
    - Flagged Lignumis mod as incompatible.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 23/6/25
  Bugfixes:
    - Fixed a crash that occurs with some mods, related to character management on game start.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 23/6/25
  Bugfixes:
    - Fixed a crash that occurs with some mods, related to crafting recipes.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 21/6/25
  Bugfixes: